#--- cvs commit TAG: rel-0-1rc5
# Sep, 03 2003
- call fini function when unloading backend
- fix build on cygwin

# Aug, 28 2003
- added some debug stuff
- bugfix: do not include lex'ed C files (build fails on cygwin)
- some work on the debian package
- configure: PTHREADS detection changed to another macro
  This should work on all archs and close "gcc: unrecognized option'-pthread'"
  on cygwin

# Aug, 12 2003
- bugfix: autogen.sh not working on bsd
- bugfix: O_SYNC not declared on freebsd 4.8
- bugfix: undefined reference to getopt_long on freebsd 4.8
- bugfix: undefined reference to errno on Mandrake 9.1
- added auto-generated .c files to 'make distclean' target

# Aug, 07 2003
- renamed CP_USER to CPERM_USER (conflicts with system definition in bsd)

# Jun, 29 2003
- bugfix: segfault when using SSL+protected data mode+PORT

# Jun, 17 2003
- bugfix: added missing include for BSD
- bugfix: user credits taken even with a ratio of 0 (leech)

# Jun, 13 2003
- bugfix: site change perms modifying max_idle
- allow modifications of group->num_logins
- added 'site grpchange' command, to modify group fields (equivalent of site
  change for users)

# Jun, 12 2003
- fixed segfault when PORT command has no arguments (Roman Bogorodskiy
  <bogorodskiy@inbox.ru>)
- bugfix: configure called with no --prefix= replace ${prefix} by NONE

# Jun, 03 2003
- sfv module: announce when release is complete
- site addip and delip can take several ip on one line

# May, 31 2003
- fixed potential bug with syslog()
- index slot number from 1 in site delip and grpdelip
- better error message for tls wrapper init (cygwin)
- bugfix: stor with an absolute path name does not work
- try default/arg conf, then /etc/wzd.cfg and /etc/wzdftpd/wzd.cfg for config
  file
- added special cookie forallgroups

# May, 28 2003
- added 'site groups' command to list groups
- fixed bug with do_site_print_file when file was not present
- do not check file descriptors using winsock, cygwin fstat fails