@@ -174,8 +174,13 @@ param_sfv_other_completebar = [WzD] - ( %.0mM %fF - COMPLETE ) - [WzD]
 
 ##### SECTIONS
 # sections are used to define local server properties
+# format: section = name path path_filter
+#   path is a regexp to specify to specify where the section is
+#   path_filter is a filter to restrict dir names when using mkdir
+# the simplest section is: ALL /* *
 # order *IS* important (first matching section is taken)
-section = ALL /* ^([][A-Za-z0-9_.'() \t-+])*$
+#   that means the more generic section should be the last
+section = ALL /* ^([]\[A-Za-z0-9_.'() \t+-])*$
 
 ##### CUSTOM SCRIPTS
 # Custom scripts (or binaries) to be executed before/after certain commands
